--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,6 @@ h3 {
 
   transition: border 200ms ease;
 }
-h3:hover {
-  border: 2px solid rgba(255, 0, 0, 0.623);
-  cursor: pointer;
-}
 
 h4 {
   font-size: 1.5rem;
@@ -117,10 +113,6 @@ a {
   background-color: white;
   font-family: "Roboto", sans-serif;
   color: black;
-}
-
-.styledButton:hover {
-  background-color: rgba(255, 0, 0, 0.623);
 }
 
 /* -------------------------HERO SECTION  */
@@ -188,10 +180,6 @@ a {
   background-color: rgba(248, 248, 248, 0.623);
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.05) 0px 8px 32px;
-}
-
-.picture-container:hover {
-  transform: scale(1.1);
 }
 
 .picture-container {
@@ -297,10 +285,6 @@ footer p {
   filter: invert(98%) sepia(0%) saturate(9%) hue-rotate(157deg) brightness(102%)
     contrast(102%);
 }
-.icons-mini:hover {
-  filter: invert(11%) sepia(74%) saturate(6288%) hue-rotate(4deg)
-    brightness(100%) contrast(119%);
-}
 
 /* -------------------------HERO TEXT GOES FROM LEFT TO THE RIGHT */
 .slide-right {
@@ -311,3 +295,19 @@ footer p {
     transform: translate(-90%, -100%);
   }
 }
+
+/* h3:hover {
+  border: 2px solid rgba(255, 0, 0, 0.623);
+  cursor: pointer;
+}
+.styledButton:hover {
+  background-color: rgba(255, 0, 0, 0.623);
+}
+
+.picture-container:hover {
+  transform: scale(1.1);
+}
+.icons-mini:hover {
+  filter: invert(11%) sepia(74%) saturate(6288%) hue-rotate(4deg)
+    brightness(100%) contrast(119%);
+} */
